--- a/app/assets/stylesheets/pdfjs_viewer/pdfjs/viewer.css
+++ b/app/assets/stylesheets/pdfjs_viewer/pdfjs/viewer.css
@@ -224,12 +224,10 @@
   direction: ltr;
   width: 816px;
   height: 1056px;
-  margin: 1px auto -8px auto;
+  margin: 0;
   position: relative;
   overflow: visible;
-  border: 9px solid transparent;
   background-clip: content-box;
-  border-image: url(/pdfjs/web/images/shadow.png) 9 9 repeat;
   background-color: white;
 }
 
