--- a/app/assets/stylesheets/pdfjs_min/application.css
+++ b/app/assets/stylesheets/pdfjs_min/application.css
@@ -10,9 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require pdfjs_viewer/pdfjs/viewer
- *= require pdfjs_viewer/minimal
- *= require pdfjs_viewer/reduced
- *= require pdfjs_viewer/full
+ *= require pdfjs_min/pdfjs/viewer
+ *= require pdfjs_min/minimal
+ *= require pdfjs_min/reduced
+ *= require pdfjs_min/full
  *= require_self
  */
