--- a/app/views/pdfjs_min/viewer/_head.html.erb
+++ b/app/views/pdfjs_min/viewer/_head.html.erb
@@ -1,7 +1,7 @@
-<meta name="pdfjs_viewer_verbosity" content="<%= ENV.fetch("PDFJS_VIEWER_VERBOSITY", "errors") %>">
+<meta name="pdfjs_min_verbosity" content="<%= ENV.fetch("PDFJS_VIEWER_VERBOSITY", "errors") %>">
 <title><%= title %></title>
 
-<%= stylesheet_link_tag "pdfjs_viewer/application", media: "all" %>
+<%= stylesheet_link_tag "pdfjs_min/application", media: "all" %>
 
 <!-- This snippet is used in production (included from viewer.html) -->
 <link rel="resource" type="application/l10n" href="/pdfjs/web/locale/locale.properties"/>
