--- a/app/views/pdfjs_min/viewer/_viewer.html.erb
+++ b/app/views/pdfjs_min/viewer/_viewer.html.erb
@@ -29,8 +29,8 @@ See https://github.com/adobe-type-tools/cmap-resources
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <%= render "pdfjs_viewer/viewer/head", title: title, pdf_url: pdf_url %>
-    <%= render "pdfjs_viewer/viewer/extra_head", local_assigns %>
+    <%= render "pdfjs_min/viewer/head", title: title, pdf_url: pdf_url %>
+    <%= render "pdfjs_min/viewer/extra_head", local_assigns %>
   </head>
 
   <body tabindex="1" class="loadingInProgress" id="pdfjs_viewer-<%= style %>">
@@ -336,6 +336,6 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     </div> <!-- outerContainer -->
     <div id="printContainer"></div>
-    <%= render "pdfjs_viewer/viewer/printcontainer" %>
+    <%= render "pdfjs_min/viewer/printcontainer" %>
   </body>
 </html>
