--- a/app/assets/stylesheets/pdfjs_min/reduced.scss
+++ b/app/assets/stylesheets/pdfjs_min/reduced.scss
@@ -1,4 +1,4 @@
-#pdfjs_viewer-reduced {
+#pdfjs_min-reduced {
   .openFile { display: none; }
   .bookmark { display: none; }
   #viewThumbnail { display: none; }
