--- a/app/views/pdfjs_min/viewer/_viewer.html.erb
+++ b/app/views/pdfjs_min/viewer/_viewer.html.erb
@@ -33,7 +33,7 @@ See https://github.com/adobe-type-tools/cmap-resources
     <%= render "pdfjs_min/viewer/extra_head", local_assigns %>
   </head>
 
-  <body tabindex="1" class="loadingInProgress" id="pdfjs_viewer-<%= style %>">
+  <body tabindex="1" class="loadingInProgress" id="pdfjs_min-<%= style %>">
     <div id="outerContainer">
 
       <div id="sidebarContainer">
