--- a/app/views/pdfjs_min/viewer/_head.html.erb
+++ b/app/views/pdfjs_min/viewer/_head.html.erb
@@ -1,4 +1,4 @@
-<meta name="pdfjs_min_verbosity" content="<%= ENV.fetch("PDFJS_VIEWER_VERBOSITY", "errors") %>">
+<meta name="pdfjs_min_verbosity" content="<%= ENV.fetch("PDFJS_MIN_VERBOSITY", "errors") %>">
 <title><%= title %></title>
 
 <%= stylesheet_link_tag "pdfjs_min/application", media: "all" %>
@@ -11,4 +11,4 @@
     window.resourceURL = "<%= pdf_url %>";
   </script>
 <% end %>
-<%= javascript_include_tag "pdfjs_viewer/application" %>
+<%= javascript_include_tag "pdfjs_min/application" %>
