--- a/test/dummy/app/views/sample/helper.html.erb
+++ b/test/dummy/app/views/sample/helper.html.erb
@@ -1,1 +1,1 @@
-<%= pdfjs_viewer pdf_url: "/sample.pdf", style: :minimal, sample_meta_content: "1" %>
+<%= pdfjs_min pdf_url: "/sample.pdf", style: :minimal %>
